Category widths on mobile and filter widths on desktop fixed.

--- a/static/css/sifter-mobile.css
+++ b/static/css/sifter-mobile.css
@@ -132,7 +132,7 @@ html,body
 
 .sifter-filters
 {
-  font-size: 1.2em;
+  font-size: 1em;
   margin: 1em;
 }
 
@@ -141,7 +141,9 @@ html,body
   color: #fff;
   background: #cf2037;
   border: 1px solid #222;
-  padding: 2px 10px;
+  width: 25%;
+  overflow: hidden;
+  padding: 0.2em;
 
   margin-left: -1px;
   float: left;
